--- a/templates/home/visitor_profile.html
+++ b/templates/home/visitor_profile.html
@@ -95,13 +95,16 @@
                             <p class="" id="name"><b>Name : </b>{{ profile.name }}</p>
                             <p class=""><b>Phone : </b>{{ profile.phone }}</p>
                             {% for schedule in schedule %}
-                                <p class="hidden" id="id">{{ schedule.id }}</p>
+                                <p hidden id="id">{{ schedule.id }}</p>
+                                <p hidden id="visitor">{{ schedule.visitor_id_id }}</p>
                                 <p class=""><b>Purpose : </b> {{ schedule.purpose }}</p>
                                 <p class=""><b>Allowed Devices : </b> {{ schedule.allowed_devices }}</p>
                                 <hr>
                                 <div id="qrcode" style="float: right; margin: 10px 20px ;"></div>
-                                <p class="" id="in_time"><b>In-Time : </b>{{ schedule.in_time }}</p>
-                                <p class="" id="out_time"><b>Out-Time : </b>{{ schedule.out_time }}</p>
+                                <b>In-Time : </b>
+                                <p class="" id="in_time">{{ schedule.in_time }}</p>
+                                <b>Out-Time : </b>
+                                <p class="" id="out_time">{{ schedule.out_time }}</p>
                                 <p><b>No. of Days : </b>{{ schedule.allowed_days }}</p>
                                 <p><b>Address : </b>{{ profile.address }}</p>
                                 <p><b>City : </b>{{ profile.city }}</p>
@@ -122,7 +125,8 @@
                 <button type="button" class="genric-btn success e-large circle" style="width: 400px;"
                         onclick="window.print()">Print
                 </button>
-                <button type="button" class="noprint" id="enter" onclick="inTimeEnter()">Mark Entry</button>
+                <button type="button" class="noprint" id="enter" onclick="inTimeEnter()">In Time Entry</button>
+                <button type="button" class="noprint" id="out" onclick="outTimeEnter()">Out Time Entry</button>
             </div>
         </div>
 
@@ -188,9 +192,7 @@
         function showqr() {
             var btn = document.getElementById('qr');
             btn.hidden = true;
-            var data = document.getElementById('name').innerHTML;
-            data = data + document.getElementById('in_time').innerHTML;
-            data = data + document.getElementById('out_time').innerHTML;
+            var data = document.getElementById('visitor').innerHTML;
             var qrcode = new QRCode(document.getElementById("qrcode"), {
                 text: data,
                 width: 128,
@@ -205,11 +207,56 @@
             var id = document.getElementById('id').innerHTML;
             var btn = document.getElementById('enter');
             btn.hidden = true;
-            alert('Entry Success, Print QR Now')
+
+            var a = document.getElementById('in_time').innerHTML;
+            var i = 0, month = "", year = "", day = "";
+
+            while (a[i] != ' ') {
+                month += a[i];
+                i++;
+            }
+            i++;
+            while (a[i] != ',') {
+                day += a[i];
+                i++;
+            }
+            i++;
+            i++;
+            while (a[i] != ',') {
+                year += a[i];
+                i++;
+            }
+
+            var current_date = new Date().getDate();
+            if (String(current_date) == day) {
+                alert('Entry Success, Print QR Now')
+                $.ajax(
+                    {
+                        type: "POST",
+                        url: '/user/in/time/enter/',
+                        data: {
+                            id: id,
+                            csrfmiddlewaretoken: '{{ csrf_token }}',
+                        },
+                    });
+            }
+            else {
+                var schedule = document.getElementById('in_time').innerHTML;
+                alert('You are scheduled for' + ' ' + schedule);
+            }
+
+
+        }
+
+        function outTimeEnter() {
+            var id = document.getElementById('id').innerHTML;
+            var btn = document.getElementById('out');
+            btn.hidden = true;
+            alert('Entry Success, Collect Id!')
             $.ajax(
                 {
                     type: "POST",
-                    url: '/user/in/time/enter/',
+                    url: '/user/out/time/enter/',
                     data: {
                         id: id,
                         csrfmiddlewaretoken: '{{ csrf_token }}',
