--- a/templates/user/schedule.html
+++ b/templates/user/schedule.html
@@ -1,34 +1,26 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
+{% load static %}
 
 {% block title %}
     <title>Schedules</title>
-
     <style>
-        input {
-            border: none;
-            background: #f9f9ff;
-            font-family: "Poppins", sans-serif;
-        }
-        input:focus{
-            outline: none;
-        }
-
-        select {
-            display: inline-flex;
-            line-height: 40px;
-            border: none;
-            background: #f9f9ff;
-            padding: 0 20px;
-            border-collapse: unset;
-            height: 40px;
-        }
-
         .errorlist li {
             color: red;
         }
 
+        .vDateField, .vTimeField {
+            margin: 2px 0;
+            padding: 2px 3px;
+            vertical-align: middle;
+            font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
+            font-weight: normal;
+            font-size: 13px;
+            margin-left: 10px;
+            padding-left: 3px;
+        }
     </style>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
 {% endblock %}
 
@@ -38,7 +30,7 @@
         <form class="form-group" action="" method="post" enctype="multipart/form-data" novalidate>
             {% csrf_token %}
             {% if flag == 1 %}
-                <p>Schedule has been created Sucessfully!</p>
+                <p>Schedule has been created Successfully!</p>
                 <a href="{% url 'visitor:schedule' %}">Add New Schedule</a>
             {% else %}
 
@@ -55,8 +47,45 @@
                                         {{ field.label_tag }}
                                     </div>
 
-                                    <div class="col-md-6 col-6 single-input">
-                                        {% render_field field placeholder=field.label %}
+                                    <div class="col-md-6 col-6">
+                                        {% if field.label == 'In time' %}
+                                            <div class="form-inline">
+                                                Date:<input autocomplete="off" type="text" name="in_time_0"
+                                                            placeholder="YY-MM-DD"
+                                                            class="vDateField form-control mr-2" size="10" required
+                                                            id="id_in_date">
+
+                                                Time:<input type="time" name="in_time_1" class="vTimeField form-control"
+                                                            size="8" placeholder="HH:MM:SS" required id="in_time">
+
+                                                <input hidden type="text" name="in_time"
+                                                       placeholder="In time" required="" id="id_in_time">
+
+                                            </div>
+
+                                        {% elif field.label == 'Out time' %}
+                                            <div class="form-inline">
+                                                Date:<input autocomplete="off" type="text"
+                                                            placeholder="YY-MM-DD"
+                                                            class="vDateField form-control mr-2" size="10" required
+                                                            id="id_out_date">
+
+                                                Time:<input type="time" name="in_time_1" class="vTimeField form-control"
+                                                            size="8" placeholder="HH:MM:SS" required id="out_time">
+
+                                                <input hidden type="text" name="out_time"
+                                                       placeholder="In time" required="" id="id_out_time">
+
+                                            </div>
+                                        {% elif field.label == 'Visitor id' %}
+                                            {{ field }}
+                                        {% elif field.label == 'Requested by' %}
+                                            {{  field }}
+
+
+                                        {% else %}
+                                            {% render_field field placeholder=field.label class='single-input' %}
+                                        {% endif %}
                                     </div>
 
                                     <div class=" col-3 col-md-3 col-lg-3 mt-2 " style="padding-left: 10px;">
@@ -64,6 +93,7 @@
                                             <a href="{% url 'visitor:update_visitor' %}" onclick="window.open(this.href, 'mywin',
                                                                'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
                                                target="_blank"><i class="fa fa-plus" style="size: inherit"></i></a>
+
                                         {% endif %}
                                     </div>
 
@@ -87,7 +117,6 @@
                 </div>
 
 
-
                 </div>
 
             {% endif %}
@@ -95,5 +124,49 @@
 {% endblock %}
 
 {% block script %}
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="{% static 'custom/select.js' %}"></script>
+    <script>
+        $(function () {
+            $("#id_in_date").datepicker({dateFormat: 'yy-mm-dd'});
+            $("#id_out_date").datepicker({dateFormat: 'yy-mm-dd'});
+
+        });
+
+        function in_time() {
+            var date = document.getElementById('id_in_date').value;
+            var time = document.getElementById('in_time').value;
+            document.getElementById('id_in_time').value = date + ' ' + time;
+        }
+
+        function out_time() {
+            var date = document.getElementById('id_out_date').value;
+            var time = document.getElementById('out_time').value;
+            document.getElementById('id_out_time').value = date + ' ' + time;
+        }
+
+
+        $(document).ready(function () {
+            $('#id_in_date').change(function () {
+                in_time();
+            });
+            $('#in_time').change(function () {
+                in_time();
+            });
+
+            $('#id_out_date').change(function () {
+                out_time();
+            });
+            $('#out_time').change(function () {
+                out_time();
+            });
+
+            $(function () {
+                $('select').selectize();
+            });
+
+        });
+    </script>
 
 {% endblock %}
