--- a/templates/home/guard_homepage.html
+++ b/templates/home/guard_homepage.html
@@ -1,9 +1,81 @@
-{% extends 'base.html' %}
-{% load widget_tweaks %}
 
-{% block title %}
-    <title>Visitor Entry</title>
-{% endblock %}
+<!DOCTYPE html>
+
+{% load static %}
+{% load widget_tweaks %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'custom/main.css' %}">
+
+    {% block title %}
+           <title>Visitor Entry</title>
+    {% endblock %}
+
+</head>
+<body>
+
+<header id="header" class="noprint">
+
+    <div class="text-right container">
+
+        {% if request.user.is_authenticated %}
+            <ul style="
+                display: flex;
+                float: right;
+            ">
+                <li class="mr-2"><a href="{% url 'logout' %}">
+                    <i class="fa fa-power-off"></i>
+                    Logout</a></li>
+                <li class="mr-2"><a href="{% url 'password_reset' %}">
+                    <i class="fa fa-group"></i>
+                    Reset Password</a></li>
+
+            </ul>
+
+        {% else %}
+            <ul style="
+                display: flex;
+                float: right;
+            ">
+                <li class="mr-2"><a href="{% url 'visitor:register' %}">
+                    <i class="fa fa-power-off"></i>
+                    Register</a></li>
+                <li class="mr-2"><a href="{% url 'login' %}">
+                    <i class="fa fa-male"></i>
+                    Login</a></li>
+            </ul>
+        {% endif %}
+
+    </div>
+
+
+    <div class="container">
+        <div class="row align-items-center justify-content-between d-flex" style="width: 100%;">
+
+            <div id="logo">
+                <a href="{% url 'home' %}"><img src="{% static 'bootstrap/img/logo.png' %}" alt="" title=""
+                                                height="60/"></a>
+            </div>
+            <nav id="nav-menu-container align-items-right">
+                <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
+
+                    {% if request.user.is_authenticated %}
+                        <li>Hello {{ request.user.get_full_name }}</li>
+                    {% endif %}
+
+
+                </ul>
+            </nav>
+        </div>
+    </div>
+</header>
+
+
 {% block body %}
 
     <div class="row">
@@ -12,7 +84,7 @@
             <div class="card-body pre-scrollable">
                 {% for vr in user %}
                     <dl>
-                        <dt class="text-capitalize">{{ vr.visitor_id.id }}  - {{ vr.visitor_id.name }}</dt>
+                        <dt class="text-capitalize"><a href="{% url 'visitor:visitor_profile' id=vr.visitor_id.id %}">{{ vr.visitor_id.id }}  - {{ vr.visitor_id.name }}</a></dt>
                         <dd> {{ vr.in_time }}</dd>
                     </dl>
                 {% endfor %}
@@ -59,7 +131,7 @@
             <div class="card-body pre-scrollable">
                 {% for vr in visitor %}
                     <dl>
-                        <dt class="text-capitalize">{{ vr.schedule_id.visitor_id.name }}</dt>
+                        <dt class="text-capitalize"><a href="{% url 'visitor:visitor_profile_out' id=vr.schedule_id.visitor_id.id %}">{{ vr.schedule_id.visitor_id.name }}</a></dt>
                         <dd><b>In-Time:</b> {{ vr.in_time }}</dd>
                         <dd><b>Scheduled Out-time:</b>{{ vr.schedule_id.out_time }}</dd>
                     </dl>
@@ -70,3 +142,37 @@
 
     </div>
 {% endblock %}
+
+
+<footer class="footer-area noprint" style="padding: 30px 0px">
+
+    <div class="row text-center">
+        <p class="col-sm-12 footer-text text-white " style="margin-top: 1rem;">
+            Copyright ©
+            <script>document.write(new Date().getFullYear());</script>
+            2019
+            All rights reserved | This website is developed with <i class="fa fa-heart-o" aria-hidden="true"></i> by
+            <a href="#" target="_blank">Students</a>
+            Interns
+        </p>
+
+    </div>
+</footer>
+</body>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+<script type="text/javascript" src={% static 'qrcode/qrcode.js' %}></script>
+
+
+</html>
+
+
+
+
