--- a/templates/user/schedule.html
+++ b/templates/user/schedule.html
@@ -19,6 +19,35 @@
             margin-left: 10px;
             padding-left: 3px;
         }
+
+        #id_visitor_id-selectized, #id_requested_by-selectized {
+            display: block;
+            width: 100% !important;
+            line-height: 40px;
+            border: none;
+            background: #f9f9ff;
+            padding: 0 20px;
+            outline-color: #d0e4d0;
+            outline-style: solid;
+            outline-width: 1px;
+        }
+
+        .selectize-dropdown {
+            display: block;
+            width: 357.5px;
+            visibility: visible;
+            outline: black 2px;
+            position: absolute;
+            background: rgb(249, 249, 255);
+            left: 15px;
+            right: 0px;
+            z-index: 99;
+            border: 2px black;
+            padding: 0px 9px;
+            border: 1px #0000004d solid;
+            overflow-y: scroll;
+            height: 225px;
+        }
     </style>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
@@ -44,19 +73,25 @@
                                 <div class="row">
 
                                     <div class="col-md-2 col-2 text-capitalize mt-8 text-dark ">
-                                        {{ field.label_tag }}
+
+                                        {% if field.label == 'In time' %}
+                                            Date:
+                                        {% elif field.label == 'Out time' %}
+                                            Time:
+                                        {% else %}
+                                            {{ field.label_tag }}
+                                        {% endif %}
                                     </div>
 
                                     <div class="col-md-6 col-6">
                                         {% if field.label == 'In time' %}
                                             <div class="form-inline">
-                                                Date:<input autocomplete="off" type="text" name="in_time_0"
-                                                            placeholder="YY-MM-DD"
-                                                            class="vDateField form-control mr-2" size="10" required
-                                                            id="id_in_date">
+                                                <!--Date:--><input autocomplete="off" type="text" name="in_time_0"
+                                                                   placeholder="YY-MM-DD"
+                                                                   class="vDateField form-control mr-2" size="10"
+                                                                   required
+                                                                   id="id_in_date">
 
-                                                Time:<input type="time" name="in_time_1" class="vTimeField form-control"
-                                                            size="8" placeholder="HH:MM:SS" required id="in_time">
 
                                                 <input hidden type="text" name="in_time"
                                                        placeholder="In time" required="" id="id_in_time">
@@ -65,13 +100,19 @@
 
                                         {% elif field.label == 'Out time' %}
                                             <div class="form-inline">
-                                                Date:<input autocomplete="off" type="text"
-                                                            placeholder="YY-MM-DD"
-                                                            class="vDateField form-control mr-2" size="10" required
-                                                            id="id_out_date">
+                                                <!--Date:--><input hidden autocomplete="off" type="text"
+                                                                   placeholder="YY-MM-DD"
+                                                                   class="vDateField form-control mr-2" size="10"
+                                                                   required
+                                                                   id="id_out_date">
 
-                                                Time:<input type="time" name="in_time_1" class="vTimeField form-control"
-                                                            size="8" placeholder="HH:MM:SS" required id="out_time">
+                                                In Time:<input type="time" name="in_time_1"
+                                                               class="vTimeField form-control mr-2"
+                                                               size="8" placeholder="HH:MM:SS" required id="in_time">
+
+                                                Out Time:<input type="time" name="in_time_1"
+                                                                class="vTimeField form-control"
+                                                                size="8" placeholder="HH:MM:SS" required id="out_time">
 
                                                 <input hidden type="text" name="out_time"
                                                        placeholder="In time" required="" id="id_out_time">
@@ -80,7 +121,7 @@
                                         {% elif field.label == 'Visitor id' %}
                                             {{ field }}
                                         {% elif field.label == 'Requested by' %}
-                                            {{  field }}
+                                            {{ field }}
 
 
                                         {% else %}
@@ -138,6 +179,7 @@
             var date = document.getElementById('id_in_date').value;
             var time = document.getElementById('in_time').value;
             document.getElementById('id_in_time').value = date + ' ' + time;
+            document.getElementById('id_out_date').value = date;
         }
 
         function out_time() {
@@ -150,14 +192,12 @@
         $(document).ready(function () {
             $('#id_in_date').change(function () {
                 in_time();
+                out_time();
             });
             $('#in_time').change(function () {
                 in_time();
             });
 
-            $('#id_out_date').change(function () {
-                out_time();
-            });
             $('#out_time').change(function () {
                 out_time();
             });
