--- a/templates/home/my_schedule.html
+++ b/templates/home/my_schedule.html
@@ -20,7 +20,7 @@
         }
 
         .bg-info {
-            background-color: #4cd3e3 !important;
+           background-color: rgba(0, 123, 255, 0.25) !important;
         }
 
 
