--- a/templates/user/scan.html
+++ b/templates/user/scan.html
@@ -11,7 +11,10 @@
 
 {% block body %}
 
-    <video id="preview"></video>
+    <div class="container text-center mt-5">
+        <video id="preview"></video>
+    </div>
+
 {% endblock %}
 
 {% block script %}
@@ -22,17 +25,17 @@
         scanner.addListener('scan', function (content) {
             alert(content);
             $.ajax({
-                        type: "POST",
-                        url: "/user/scan/qr/",
-                        data: {
-                            id : content,
-                            csrfmiddlewaretoken: '{{ csrf_token }}',
-                        },
-                        success: function () {
-                            window.location.href = "/user/home/guard_homepage/visitor_entry/"+ content;
-                        }
+                type: "POST",
+                url: "/user/scan/qr/",
+                data: {
+                    id: content,
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                },
+                success: function () {
+                    window.location.href = "/user/home/guard_homepage/visitor_entry/" + content;
+                }
 
-                    });
+            });
         });
         Instascan.Camera.getCameras().then(function (cameras) {
             if (cameras.length > 0) {
