--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
         <title>Base</title>
     {% endblock %}
 
+
+
 </head>
 <body>
 
@@ -87,7 +89,7 @@
 
 {% endblock %}
 
-<footer class="footer-area noprint" style="padding: 30px 0px">
+<footer class="footer-area noprint mt-5" style="padding: 30px 0px">
 
     <div class="row text-center">
         <p class="col-sm-12 footer-text text-white " style="margin-top: 1rem;">
@@ -104,12 +106,8 @@
 </body>
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
+<script src="{% static 'custom/jquery-3.3.1.slim.min.js' %}"></script>
+<script src="{% static 'custom/popper.min.js' %}"></script>
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 <script type="text/javascript" src={% static 'qrcode/qrcode.js' %}></script>
 
