--- a/templates/home/past_visitor.html
+++ b/templates/home/past_visitor.html
@@ -1,70 +1,77 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-<title>Past Visitors</title>
-<style>
-table {
-  border-collapse: collapse;
-  border-spacing: 1px;
-  width: 100%;
-  border: 5px solid #ddd;
-}
-th, td {
-  text-align: left;
-  padding: 8px;
-}
-tr:nth-child(even){background-color: #f2f2f2}
-    .bg-info{
-        background-color: #4cd3e3 !important;
-    }
+    <title>Past Visitors</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            border-spacing: 1px;
+            width: 100%;
+            border: 5px solid #ddd;
+        }
+
+        th, td {
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2
+        }
+
+        .bg-info {
+
+            background-color: rgba(0, 123, 255, 0.25) !important;
+        }
 
 
-</style>
+    </style>
 {% endblock %}
 
 {% block body %}
-<br>
+    <br>
 
 
-<h1 class="text-center"> Past Visitors </h1>
-<br>
-<div style="overflow-x:auto;">
+    <h1 class="text-center"> Past Visitors </h1>
+    <br>
+    <div style="overflow-x:auto;">
 
-    <table class="table">
-        <tr>
-            <thead class="bg-info">
-            <th> Name</th>
-            <th>Purpose</th>
-            <th>Allowed Device</th>
-            <th>In- Time</th>
-            <th>Out- Time</th>
-            <th>Allowed Days</th>
-            <th>Meeting Place</th>
-            <th>Phone</th>
-            <th>E-mail</th>
-            <th>Designation</th>
-            <th>Photo</th>
-            </thead>
-        </tr>
-        {% for vr in past_visitors %}
-        <tr>
-            <td><a href="{% url 'visitor:schedule_edit' sch_id=vr.id %}">{{ vr.visitor_id }}</a> </td>
-            <td>{{ vr.purpose }}</td>
-            <td>{{ vr.allowed_devices }}</td>
-            <td>{{ vr.in_time }}</td>
-            <td>{{ vr.out_time }}</td>
-            <td>{{ vr.allowed_days }}</td>
-            <td>{{ vr.meeting_place }}</td>
-            <td>{{ vr.phone }}</td>
-            <td>{{ vr.email }}</td>
-            <td>{{ vr.designation }}</td>
-            <td>{% if vr.photo %} <a href="/media/{{ vr.photo }}" class="img-pop-up"><img src="/media/{{ vr.photo }}"
-                                                                                          style="width:90px; height: 100px;"/></a>
-            </td>
-            {% endif %}
+        <table class="table">
+            <tr>
+                <thead class="bg-info">
+                <th> Name</th>
+                <th>Purpose</th>
+                <th>Allowed Device</th>
+                <th>In- Time</th>
+                <th>Out- Time</th>
+                <th>Allowed Days</th>
+                <th>Meeting Place</th>
+                <th>Phone</th>
+                <th>E-mail</th>
+                <th>Designation</th>
+                <th>Photo</th>
+                </thead>
+            </tr>
+            {% for vr in past_visitors %}
+                <tr>
+                <td><a href="{% url 'visitor:schedule_edit' sch_id=vr.id %}">{{ vr.visitor_id }}</a></td>
+                <td>{{ vr.purpose }}</td>
+                <td>{{ vr.allowed_devices }}</td>
+                <td>{{ vr.in_time }}</td>
+                <td>{{ vr.out_time }}</td>
+                <td>{{ vr.allowed_days }}</td>
+                <td>{{ vr.meeting_place }}</td>
+                <td>{{ vr.phone }}</td>
+                <td>{{ vr.email }}</td>
+                <td>{{ vr.designation }}</td>
+                <td>{% if vr.photo %}
+                    <a href="/media/{{ vr.photo }}" class="img-pop-up"><img src="/media/{{ vr.photo }}"
+                                                                            style="width:90px; height: 100px;"/></a>
+                    </td>
+                {% endif %}
 
 
             {% endfor %}
-    </table>
+        </table>
 
-    {% endblock %}
+{% endblock %}
