--- a/templates/home/my_schedule.html
+++ b/templates/home/my_schedule.html
@@ -3,24 +3,41 @@
 {% block title %}
     <title>Past Visitors</title>
     <style>
-        table {
-            border-collapse: collapse;
-            border-spacing: 1px;
-            width: 100%;
-            border: 5px solid #ddd;
-        }
 
-        th, td {
-            text-align: left;
-            padding: 8px;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f2
-        }
 
         .bg-info {
-           background-color: rgba(0, 123, 255, 0.25) !important;
+            background-color: rgba(0, 123, 255, 0.25) !important;
+        }
+
+
+        #myTable {
+            border-collapse: collapse; /* Collapse borders */
+            width: 100%; /* Full-width */
+            border: 1px solid #ddd; /* Add a grey border */
+        }
+
+        #myTable th, #myTable td {
+            text-align: left; /* Left-align text */
+            padding: 12px; /* Add padding */
+        }
+
+        #myTable tr {
+            /* Add a bottom border to all table rows */
+            border-bottom: 1px solid #ddd;
+        }
+
+        #myTable tr.header, #myTable tr:hover {
+            /* Add a grey background color to the table header and on hover */
+            background-color: #f1f1f1;
+        }
+
+        .less-width {
+            width: 120px;
+            font-size: 2px;
+        }
+
+        input {
+            font-size: 14px !important;
         }
 
 
@@ -33,43 +50,96 @@
 
     <h1 class="text-center"> My schedules</h1>
     <br>
+
+
+
     <div style="overflow-x:auto;">
 
-        <table class="table">
-            <tr>
-                <thead class="bg-info">
-                <th> Name</th>
-                <th>Purpose</th>
-                <th>Allowed Device</th>
-                <th>In- Time</th>
-                <th>Out- Time</th>
-                <th>Allowed Days</th>
-                <th>Meeting Place</th>
-                <th>Approve Status</th>
-                <th>Edit</th>
-                </thead>
-            </tr>
-            {% for vr in my_schedule %}
-                <tr>
-                    <td>{{ vr.visitor_id.name }}</td>
-                    <td>{{ vr.purpose }}</td>
-                    <td>{{ vr.allowed_devices }}</td>
-                    <td>{{ vr.in_time }}</td>
-                    <td>{{ vr.out_time }}</td>
-                    <td>{{ vr.allowed_days }}</td>
-                    <td>{{ vr.meeting_place }}</td>
-                    {% if vr.approve == True %}
-                        <td>Approved</td>
-                    {% else %}
-                        <td>Pending Approval</td>
-                    {% endif %}
-                    <td>
-                        <a href="{% url 'visitor:schedule_edit' sch_id=vr.id %}"><i class="fa fa-edit"></i> </a>
-                        <a href="#" class="ml-2" style="color: indianred"><i class="fa fa-remove"></i></a>
-                    </td>
 
-                </tr>
-            {% endfor %}
-        </table>
+    <table class="table table-striped" id="myTable">
+        <tr class="header">
+            <thead class="bg-info">
+            <th class="less-width"><input type="text" class="form-control" id="id" onkeyup="search(0,'id')"
+                                          placeholder="ID"></th>
+            <th class="less-width"><input type="text" class="form-control" id="name" onkeyup="search(1, 'name')"
+                                          placeholder="Name"></th>
+            <th>Purpose</th>
+            <th>Allowed Device</th>
+            <th class="less-width"><input type="text" class="form-control" id="date" onkeyup="search(4, 'date')"
+                                          placeholder="Start Date"></th>
+            <th>In- Time</th>
+            <th>Out- Time</th>
+            <th>Allowed Days</th>
+
+            <th>Meeting Place</th>
+            <th>Allowed Status</th>
+            <th>Prohibited</th>
+
+            <th>Edit</th>
+            </thead>
+        </tr>
+        {% for vr in my_schedule %}
+            <tr>
+                <td>ISRO{{ vr.visitor_id.id }}</td>
+                <td>{{ vr.visitor_id.name }}</td>
+                <td>{{ vr.purpose }}</td>
+                <td>{{ vr.allowed_devices }}</td>
+                <td>{{ vr.in_time.date }}</td>
+                <td>{{ vr.in_time.time }}</td>
+                <td>{{ vr.out_time.time }}</td>
+                <td>{{ vr.allowed_days }}</td>
+                <td>{{ vr.meeting_place }}</td>
+                {% if vr.approve == True %}
+                    <td>Approved</td>
+                {% else %}
+                    <td>Pending Approval</td>
+                {% endif %}
+                {% if vr.entry_prohibition == True %}
+                    <td>
+
+                        <a href="{% url 'visitor:schedule_disapprove' id=vr.id %}" class="ml-2"
+                           style="color: indianred"><i class="fa fa-toggle-on"></i></a>
+
+                    </td>
+                {% else %}
+                    <td>
+                        <a class="primary-switch" href="{% url 'visitor:schedule_disapprove' id=vr.id %}" class="ml-2"
+                           style="color: green"><i class="fa fa-toggle-off"></i></a>
+                    </td>
+                {% endif %}
+                <td>
+                    <a href="{% url 'visitor:schedule_edit' sch_id=vr.id %}"><i class="fa fa-edit"></i> </a>
+                </td>
+
+            </tr>
+        {% endfor %}
+    </table>
+
+{% endblock %}
+
+{% block script %}
+    <script>
+        function search(n, id) {
+            // Declare variables
+            var input, filter, table, tr, td, i, txtValue;
+            input = document.getElementById(id);
+            filter = input.value.toUpperCase();
+            table = document.getElementById("myTable");
+            tr = table.getElementsByTagName("tr");
+
+            // Loop through all table rows, and hide those who don't match the search query
+            for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[n];
+                if (td) {
+                    txtValue = td.textContent || td.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }
+            }
+        }
+    </script>
 
 {% endblock %}
