--- a/templates/home/dashboard.html
+++ b/templates/home/dashboard.html
@@ -74,8 +74,10 @@
                 <a href="{% url 'visitor:schedule' %}" class="genric-btn success circle arrow mt-3"> Schedule new
                     Visit <i class="fa fa-file-text-o ml-2"></i></a>
 
-                <a href="{% url 'visitor:update_visitor' %}" class="genric-btn success circle arrow mt-3">Add Visitor <i
-                        class="fa fa-plus-square-o ml-2"></i></a>
+                <a href="{% url 'visitor:update_visitor' %}"  class="genric-btn success circle arrow mt-3" onclick="window.open(this.href, 'mywin',
+                                                               'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
+                                               target="_blank">Add Visitor<i class="fa fa-plus-square-o ml-2"></i></a>
+
             </div>
 
         </div>
