--- a/templates/home/visitor_profile.html
+++ b/templates/home/visitor_profile.html
@@ -78,13 +78,18 @@
 
             <div class="col-lg-6 col-md-6 mt-5 noprint text-center">
 
+
                 <div class="row" style="display: block">
                     <video height="230px" width="450px"></video>
                 </div>
 
+
+
                 <div class="container">
 
                     <div>
+
+
                         <button type="button" id="take-photo" title="Take Photo"
                                 class="btn btn-info radius e-large">Capture
                         </button>
@@ -92,6 +97,8 @@
                         <button type="button" id="save-photo" title="Save Photo"
                                 class="btn btn-success radius e-large">Save
                         </button>
+
+
 
                     </div>
                     <div class="mt-3">
@@ -107,7 +114,7 @@
                     </div>
 
                     <div class="mt-5">
-
+                    {% if  %}
                         <button type="button" class="btn btn-info e-large" id="enter" onclick="inTimeEnter()">In Time
                             Entry
                         </button>
@@ -138,8 +145,8 @@
                         </div>
                         {% if profile.photo %}
                             <div>
-                                <img class="desc" src="{{ profile.photo.url }}"
-                                     style="height: 120px; width: 120px;  float: right; margin: 10px 30px;">
+                                    <img class="desc" src="{{ profile.photo.url }}"
+                                         style="height: 120px; width: 120px;  float: right; margin: 10px 30px;">
                             </div>
                         {% else %}
                             <div class="mr-3">
@@ -158,7 +165,9 @@
                             <p class=""><b>Allowed Devices : </b> {{ schedule.allowed_devices }}</p>
                             <p class=""><b>Meeting Place : </b> {{ schedule.meeting_place }}</p>
                             <hr>
-                            <div id="qrcode" style="float: right; margin: 10px 20px ;"></div>
+                            <div id="qrcode" style="float: right; margin: 10px 20px ;">
+                                ISRO{{ profile.id }}
+                            </div>
                             <b>Scheduled In-Time : </b>
                             <p class="" id="in_time">{{ schedule.in_time }}</p>
                             <b>Scheduled Out-Time : </b>
