--- a/templates/base.html
+++ b/templates/base.html
@@ -15,10 +15,13 @@
         <title>Base</title>
     {% endblock %}
 
+
+
 </head>
 <body>
 
-<header id="header">
+
+<header id="header" class="noprint">
 
     <div class="text-right container">
 
@@ -87,7 +90,7 @@
 
 {% endblock %}
 
-<footer class="footer-area" style="padding: 30px 0px">
+<footer class="footer-area noprint mt-5" style="padding: 30px 0px">
 
     <div class="row text-center">
         <p class="col-sm-12 footer-text text-white " style="margin-top: 1rem;">
@@ -95,7 +98,7 @@
             <script>document.write(new Date().getFullYear());</script>
             2019
             All rights reserved | This website is developed with <i class="fa fa-heart-o" aria-hidden="true"></i> by
-            <a href="#" target="_blank">Students</a>
+            <a href="#" target="_blank">Student</a>
             Interns
         </p>
 
@@ -104,14 +107,11 @@
 </body>
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
+<script src="{% static 'custom/jquery-3.3.1.slim.min.js' %}"></script>
+<script src="{% static 'custom/popper.min.js' %}"></script>
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 <script type="text/javascript" src={% static 'qrcode/qrcode.js' %}></script>
+
 
 {% block script %}
 {% endblock %}
