--- a/templates/home/dashboard.html
+++ b/templates/home/dashboard.html
@@ -22,6 +22,10 @@
             padding: 10px;
         }
 
+        .genric-btn {
+            min-width: 250px;
+            background: #4b6d71 !important;
+        }
     </style>
 {% endblock %}
 
@@ -57,22 +61,34 @@
         </div>
 
 
-        <div class="col-md-6 col-lg-6 mt-5">
-            <div><a href="{% url 'visitor:past_visitor' %}">Past
-                Visitors</a>
+        <div class="col-md-6 col-lg-6 mt-5 text-center">
+            <div class="container">
+                
+
+                <a href="{% url 'visitor:my_schedules' %}" class="genric-btn success circle arrow mt-5">Upcoming Visits<i
+                        class="fa fa-home ml-2"></i></a>
+
+                <a href="{% url 'visitor:past_visitor' %}" class="genric-btn success circle arrow mt-3">Past
+                    Visitors <i class="fa fa-bar-chart ml-2"></i></a>
+
+                <a href="{% url 'visitor:schedule' %}" class="genric-btn success circle arrow mt-3"> Schedule new
+                    Visit <i class="fa fa-file-text-o ml-2"></i></a>
+
+                <a href="{% url 'visitor:update_visitor' %}"  class="genric-btn success circle arrow mt-3" onclick="window.open(this.href, 'mywin',
+                                                               'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
+                                               target="_blank">Add Visitor<i class="fa fa-plus-square-o ml-2"></i></a>
+
             </div>
-            <div><a href="{% url 'visitor:schedule' %}"> Schedule new
-                Visit</a>
-            </div>
+
         </div>
 
         <div class=" col-md-3 col-lg-3 card text-black card-color">
             <div class="card-header">Approved Schedule</div>
-            <div class="card-body">
+            <div class="card-body pre-scrollable">
                 {% for vr in upcoming_visitor %}
                     <dl>
-                        <dt>{{ vr.visitor_id }}</dt>
-                        <dd> {{ vr.purpose }}</dd>
+                        <dt>Name:<a href="{% url 'visitor:schedule_edit' sch_id=vr.id %}">{{ vr.visitor_id }}</a></dt>
+                        <dd>Purpose: {{ vr.purpose }}</dd>
                     </dl>
                 {% endfor %}
             </div>
