--- a/templates/home/guard_homepage.html
+++ b/templates/home/guard_homepage.html
@@ -1,19 +1,93 @@
-{% extends 'base.html' %}
-{% load widget_tweaks %}
 
-{% block title %}
-    <title>Visitor Entry</title>
-{% endblock %}
+<!DOCTYPE html>
+
+{% load static %}
+{% load widget_tweaks %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'custom/main.css' %}">
+
+    {% block title %}
+           <title>Visitor Entry</title>
+    {% endblock %}
+
+</head>
+<body>
+
+<header id="header" class="noprint">
+
+<div id="google_translate_element"></div>
+
+    <div class="text-right container">
+
+        {% if request.user.is_authenticated %}
+            <ul style="
+                display: flex;
+                float: right;
+            ">
+                <li class="mr-2"><a href="{% url 'logout' %}">
+                    <i class="fa fa-power-off"></i>
+                    Logout</a></li>
+                <li class="mr-2"><a href="{% url 'password_reset' %}">
+                    <i class="fa fa-group"></i>
+                    Reset Password</a></li>
+
+            </ul>
+
+        {% else %}
+            <ul style="
+                display: flex;
+                float: right;
+            ">
+                <li class="mr-2"><a href="{% url 'visitor:register' %}">
+                    <i class="fa fa-power-off"></i>
+                    Register</a></li>
+                <li class="mr-2"><a href="{% url 'login' %}">
+                    <i class="fa fa-male"></i>
+                    Login</a></li>
+            </ul>
+        {% endif %}
+
+    </div>
+
+
+    <div class="container">
+        <div class="row align-items-center justify-content-between d-flex" style="width: 100%;">
+
+            <div id="logo">
+                <a href="{% url 'home' %}"><img src="{% static 'bootstrap/img/logo.png' %}" alt="" title=""
+                                                height="60/"></a>
+            </div>
+            <nav id="nav-menu-container align-items-right">
+                <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
+
+                    {% if request.user.is_authenticated %}
+                        <li>Hello {{ request.user.get_full_name }}</li>
+                    {% endif %}
+
+
+                </ul>
+            </nav>
+        </div>
+    </div>
+</header>
+
+
 {% block body %}
 
     <div class="row">
         <div class=" col-md-3 col-lg-3 card text-black card-color mb-3 ">
             <div class="card-header">Scheduled Visits</div>
-            <div class="card-body">
+            <div class="card-body pre-scrollable">
                 {% for vr in user %}
                     <dl>
-                        <dt>{{ vr.visitor_id }}</dt>
-                        <dd> {{ vr.in_time }}</dd>
+                        <dt class="text-capitalize"><a href="{% url 'visitor:visitor_profile' id=vr.visitor_id.id %}">ISRO{{ vr.visitor_id.id }}  - {{ vr.visitor_id.name }}</a></dt>
+                        <dd> {{ vr.in_time.time }} - {{ vr.requested_by.get_full_name }}</dd>
                     </dl>
                 {% endfor %}
             </div>
@@ -42,7 +116,7 @@
                         <br>
 
                         <button class="btn btn-lg btn-success btn-block text-uppercase" type="submit" name="action"
-                                value="Send">VERIFY
+                                value="Send">OK
                         </button>
 
                         <a class="btn btn-lg btn-primary btn-block text-uppercase mt-3" href="{% url 'visitor:scan-qr' %}">Scan
@@ -55,12 +129,13 @@
         </div>
 
         <div class=" col-md-3 col-lg-3 card text-black card-color mb-3">
-            <div class="card-header">Visitors Inside</div>
-            <div class="card-body">
+            <div class="card-header ">Visitors Inside</div>
+            <div class="card-body pre-scrollable">
                 {% for vr in visitor %}
                     <dl>
-                        <dt>{{ vr.schedule_id }}</dt>
-                        <dd> {{ vr.in_time }}</dd>
+                        <dt class="text-capitalize"><a href="{% url 'visitor:visitor_profile_out' id=vr.schedule_id.visitor_id.id %}">{{ vr.schedule_id.visitor_id.name }}</a></dt>
+                        <dd><b>In-Time:</b> {{ vr.in_time }}</dd>
+                        <dd><b>Scheduled Out-time:</b>{{ vr.schedule_id.out_time }}</dd>
                     </dl>
                 {% endfor %}
             </div>
@@ -69,3 +144,45 @@
 
     </div>
 {% endblock %}
+
+
+<footer class="footer-area noprint" style="padding: 30px 0px">
+
+    <div class="row text-center">
+        <p class="col-sm-12 footer-text text-white " style="margin-top: 1rem;">
+            Copyright ©
+            <script>document.write(new Date().getFullYear());</script>
+            2019
+            All rights reserved | This website is developed with <i class="fa fa-heart-o" aria-hidden="true"></i> by
+            <a href="#" target="_blank">Students</a>
+            Interns
+        </p>
+
+    </div>
+</footer>
+</body>
+
+
+<script src="{% static 'custom/jquery-3.3.1.slim.min.js' %}"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="{% static 'custom/popper.min.js' %}"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+<script type="text/javascript" src={% static 'qrcode/qrcode.js' %}></script>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="{% static 'custom/translate.js' %}"></script>
+
+
+</html>
+
+
+
+
