--- a/templates/home/visitor_profile.html
+++ b/templates/home/visitor_profile.html
@@ -1,21 +1,65 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}
     <title xmlns="http://www.w3.org/1999/html">VisitorEntry</title>
     <style>
-        p {
-            font-family: 'Montserrat', monospace;
-            font-size: 15px;
+
+        html, body {
+            font-family: "Poppins", sans-serif;
+            background: #e8ecf1;
+            color: black;
+        }
+
+        b {
+            color: black;
         }
 
         @media print {
             .noprint {
                 display: none;
             }
+
+            .print {
+                margin-left: 12vh;
+                top: 18vh;
+                bottom: 0px;
+                width: auto;
+                height: 100vh;
+                transform: scale(2.0);
+
+            }
+
+
         }
 
         @media screen {
             ...
         }
+
+        .idcard-front {
+            background: white;
+            width: 450px;
+            border-radius: .2em;
+            box-shadow: 0 2.5em .9em -2em #555;
+            position: absolute;
+            outline: #00000087 1px solid;
+        }
+
+        .desc {
+            font-weight: 600;
+            position: relative;
+            width: 100%;
+            text-align: center;
+        }
+
+        button {
+            min-width: 200px;
+            margin-top: 5px;
+            color: black !important;
+            font-size: 20px !important;
+        }
+
+
     </style>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 {% endblock %}
@@ -25,70 +69,134 @@
 
 {% block body %}
 
+    <div class="mt-5">
+        <h2 class="desc noprint">Welcome to RRSCW</h2>
+    </div>
 
-    <div class="container row">
+    <div class="container">
+        <div class="row">
 
-        <div class="mt-5 col-lg-6 offset-2 ">
-            <ul>
+            <div class="col-lg-6 col-md-6 mt-5 noprint text-center">
+
+
+                <div class="row" style="display: block">
+                    <video height="230px" width="450px"></video>
+                </div>
+
+
+
+                <div class="container">
+
+                    <div>
+
+
+                        <button type="button" id="take-photo" title="Take Photo"
+                                class="btn btn-info radius e-large">Capture
+                        </button>
+
+                        <button type="button" id="save-photo" title="Save Photo"
+                                class="btn btn-success radius e-large">Save
+                        </button>
+
+
+
+                    </div>
+                    <div class="mt-3">
+
+                        <button type="button" hidden class="btn btn-info success e-large" id="qr"
+                                onclick="showqr()">View-QR
+                        </button>
+
+                        <button type="button" class="btn btn-info success e-large"
+                                onclick="window.print()">Print
+                        </button>
+
+                    </div>
+
+                    <div class="mt-5">
+                    {% if  %}
+                        <button type="button" class="btn btn-info e-large" id="enter" onclick="inTimeEnter()">In Time
+                            Entry
+                        </button>
+
+
+                        <button type="button" class="btn btn-info e-large" id="out" onclick="outTimeEnter()">Out
+                            Time
+                            Entry
+                        </button>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+            <div class="col-lg-6 col-md-6 mt-5 print" style="height: 680px; padding-left: 53px;">
                 {% for profile in profile %}
-                    <div class="card" id="printable" style="width:400px">
+                    <div class="idcard-front pl-2">
+
+                        <div class="desc mt-3">
+                            <img class="float-left ml-4" src="{% static 'bootstrap/img/logo.png' %}"
+                                 style="width: 50px; height: 50px;">
+                            <p>Indian Space Research
+                                Organisation<br>
+                                <b>RRSC-WEST Visitor's Pass</b>
+                            </p>
+                        </div>
                         {% if profile.photo %}
-                            <div class="col-md-4 float-right">
-                                <img src="{{ profile.photo.url }}" style="height:330px; width:370px;">
+                            <div>
+                                    <img class="desc" src="{{ profile.photo.url }}"
+                                         style="height: 120px; width: 120px;  float: right; margin: 10px 30px;">
                             </div>
                         {% else %}
-                            <canvas id="snapshot" width="250px" height="250px"></canvas>
-                            <input type="number" hidden id='pk' value={{ profile.id }}>
-
-                            <div class="controls">
-                                <a href="#" id="delete-photo" title="Delete Photo" class="disabled"><i
-                                        class="material-icons">delete</i></a>
-                                <button type="button" id="take-photo" title="Take Photo"><i class="material-icons">Capture</i>
-                                </button>
-                                <a href="#" id="save-photo" title="Save Photo"
-                                   class="disabled"><i
-                                        class="material-icons">Save</i></a>
+                            <div class="mr-3">
+                                <canvas id="snapshot" width="130px" height="130px"
+                                        style="float: right; width:130px; height:130px;"></canvas>
+                                <input type="number" hidden id='pk' value={{ profile.id }}>
                             </div>
                         {% endif %}
-                        <div class="card-body">
-                            <div id="qrcode"></div>
-                            <h4 class="card-title">Indian Space Research Organisation</h4>
-                            <p class="card-text">Regional Remote Sensing Center West</p>
-                            <b>Name:</b>
-                            <p class="card-text" id="name">{{ profile.name }}</p>
-                            <p class="card-text"><b>Phone:</b>{{ profile.phone }}</p>
-                            {% for schedule in schedul %}
-                                <p class="card-text"><b>Purpose:</b> {{ schedule.purpose }}</p>
-                                <p class="card-text"><b>Allowed Devices:</b> {{ schedule.allowed_devices }}</p>
-                                <b>In-Time:</b>
-                                <p class="card-text" id="in_time">{{ schedule.in_time }}</p>
-                                <b>Out-Time:</b>
-                                <p class="card-text" id="out_time">{{ schedule.out_time }}</p>
-                            {% endfor %}
-                            <button type="button" class="noprint" id="qr" onclick="showqr()">View-QR</button>
-                        </div>
-
+                        <p class="" id="name"><b>Name : </b>{{ profile.name }}</p>
+                        <p class=""><b>Phone : </b>{{ profile.phone }}</p>
+                        {% for schedule in schedule %}
+                            <p hidden id="id">{{ schedule.id }}</p>
+                            <p hidden id="visitor">{{ schedule.visitor_id_id }}</p>
+                            <p class=""><b>Meeting Person : </b> {{ schedule.requested_by.get_full_name }}</p>
+                            <p class=""><b>Purpose : </b> {{ schedule.purpose }}</p>
+                            <p class=""><b>Allowed Devices : </b> {{ schedule.allowed_devices }}</p>
+                            <p class=""><b>Meeting Place : </b> {{ schedule.meeting_place }}</p>
+                            <hr>
+                            <div id="qrcode" style="float: right; margin: 10px 20px ;">
+                                ISRO{{ profile.id }}
+                            </div>
+                            <b>Scheduled In-Time : </b>
+                            <p class="" id="in_time">{{ schedule.in_time }}</p>
+                            <b>Scheduled Out-Time : </b>
+                            <p class="" id="out_time">{{ schedule.out_time }}</p>
+                            <p><b>Allowed Day(s) : </b>{{ schedule.allowed_days }}</p>
+                            <p><b>Address : </b>{{ profile.address }}</p>
+                            <br>
+                            <br>
+                            <p class="float-left">Signature guard</p>
+                            <p class="float-right mr-2">Signature Visitor</p>
+                        {% endfor %}
                     </div>
-                    </ul>
-                    </div>
-
-                     <div class="noprint mt-5 col">
-                        <video height="250px" width="250px"></video>
-                    </div>
-                    </div>
-                    <div class="text-center">
-                        <button class="btn btn-light noprint" onclick="window.print()">Print</button>
-                    </div>
-
-
-
                 {% endfor %}
+            </div>
+
+        </div>
+    </div>
+
 
 {% endblock %}
 
 {% block script %}
+
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script>
+
+        $(document).ready(function () {
+            document.getElementById("qr").click();
+        });
         const vid = document.querySelector('video');
         navigator.mediaDevices.getUserMedia({video: true}) // request cam
             .then(stream => {
@@ -108,7 +216,7 @@
                     pk = pk.value;
                     $.ajax({
                         type: "POST",
-                        url: "/user/home/guard_homepage/",
+                        url: "/user/guard/",
                         data: {
                             photo: snap,
                             pk: pk,
@@ -118,7 +226,6 @@
                     });
                 };
             });
-
 
         function takeASnap() {
             const canvas = document.querySelector('canvas'), // create a canvas
@@ -140,32 +247,9 @@
             }
         }
 
-        {#function saveImage(snap) {#}
-        {#         alert('hi');#}
-        {#        $.ajax({#}
-        {#            url: "/user/home/guard_homepage/",#}
-        {#            type: "POST",#}
-        {#            data: snap,#}
-        {#        });#}
-        {#    }#}
-
-
-        {#function download(blob) {#}
-        {#    // uses the <a download> to download a Blob#}
-        {#    let a = document.createElement('a');#}
-        {#    a.href = URL.createObjectURL(blob);#}
-        {#    a.download = 'screenshot.jpg';#}
-        {#    document.body.appendChild(a);#}
-        {#    a.click();#}
-
 
         function showqr() {
-
-            var btn = document.getElementById('qr');
-            btn.hidden = true;
-            var data = document.getElementById('name').innerHTML;
-            data = data + document.getElementById('in_time').innerHTML;
-            data = data + document.getElementById('out_time').innerHTML;
+            var data = document.getElementById('visitor').innerHTML;
             var qrcode = new QRCode(document.getElementById("qrcode"), {
                 text: data,
                 width: 128,
@@ -176,6 +260,67 @@
             });
         }
 
+        function inTimeEnter() {
+            var id = document.getElementById('id').innerHTML;
+            var btn = document.getElementById('enter');
+            btn.hidden = true;
+
+            var a = document.getElementById('in_time').innerHTML;
+            var i = 0, month = "", year = "", day = "";
+
+            while (a[i] != ' ') {
+                month += a[i];
+                i++;
+            }
+            i++;
+            while (a[i] != ',') {
+                day += a[i];
+                i++;
+            }
+            i++;
+            i++;
+            while (a[i] != ',') {
+                year += a[i];
+                i++;
+            }
+
+            var current_date = new Date().getDate();
+            if (String(current_date) == day) {
+                alert('Entry Success, Print QR Now')
+                $.ajax(
+                    {
+                        type: "POST",
+                        url: '/user/in/time/enter/',
+                        data: {
+                            id: id,
+                            csrfmiddlewaretoken: '{{ csrf_token }}',
+                        },
+                    });
+            } else {
+                var schedule = document.getElementById('in_time').innerHTML;
+                alert('You are scheduled for' + ' ' + schedule);
+            }
+
+
+        }
+
+        function outTimeEnter() {
+            var id = document.getElementById('id').innerHTML;
+            var btn = document.getElementById('out');
+            btn.hidden = true;
+            alert('Entry Success, Collect Id!')
+            $.ajax(
+                {
+                    type: "POST",
+                    url: '/user/out/time/enter/',
+                    data: {
+                        id: id,
+                        csrfmiddlewaretoken: '{{ csrf_token }}',
+                    },
+                });
+        }
+
 
     </script>
+
 {% endblock %}
