--- a/templates/user/schedule.html
+++ b/templates/user/schedule.html
@@ -1,34 +1,55 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
+{% load static %}
 
 {% block title %}
     <title>Schedules</title>
-
     <style>
-        input {
-            border: none;
-            background: #f9f9ff;
-            font-family: "Poppins", sans-serif;
-        }
-        input:focus{
-            outline: none;
-        }
-
-        select {
-            display: inline-flex;
-            line-height: 40px;
-            border: none;
-            background: #f9f9ff;
-            padding: 0 20px;
-            border-collapse: unset;
-            height: 40px;
-        }
-
         .errorlist li {
             color: red;
         }
 
+        .vDateField, .vTimeField {
+            margin: 2px 0;
+            padding: 2px 3px;
+            vertical-align: middle;
+            font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
+            font-weight: normal;
+            font-size: 13px;
+            margin-left: 10px;
+            padding-left: 3px;
+        }
+
+        #id_visitor_id-selectized, #id_requested_by-selectized {
+            display: block;
+            width: 100% !important;
+            line-height: 40px;
+            border: none;
+            background: #f9f9ff;
+            padding: 0 20px;
+            outline-color: #d0e4d0;
+            outline-style: solid;
+            outline-width: 1px;
+        }
+
+        .selectize-dropdown {
+            display: block;
+            width: 357.5px;
+            visibility: visible;
+            outline: black 2px;
+            position: absolute;
+            background: rgb(249, 249, 255);
+            left: 15px;
+            right: 0px;
+            z-index: 99;
+            border: 2px black;
+            padding: 0px 9px;
+            border: 1px #0000004d solid;
+            overflow-y: scroll;
+            height: 225px;
+        }
     </style>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
 {% endblock %}
 
@@ -38,8 +59,9 @@
         <form class="form-group" action="" method="post" enctype="multipart/form-data" novalidate>
             {% csrf_token %}
             {% if flag == 1 %}
-                <p>Schedule has been created Sucessfully!</p>
-                <a href="{% url 'visitor:schedule' %}">Add New Schedule</a>
+                <p>Schedule has been created Successfully!</p>
+                <a href="{% url 'visitor:schedule' %}">Add New Schedule</a> <br>
+                <a href="{% url 'visitor:allowed_devices' %}">Allow devices</a>
             {% else %}
 
                 {% for field in schedule_form %}
@@ -52,11 +74,65 @@
                                 <div class="row">
 
                                     <div class="col-md-2 col-2 text-capitalize mt-8 text-dark ">
-                                        {{ field.label_tag }}
+
+                                        {% if field.label == 'In time' %}
+                                            Date:
+                                        {% elif field.label == 'Out time' %}
+                                            Time:
+                                        {% else %}
+                                            {{ field.label_tag }}
+                                        {% endif %}
                                     </div>
 
-                                    <div class="col-md-6 col-6 single-input">
-                                        {% render_field field placeholder=field.label %}
+                                    <div class="col-md-6 col-6">
+                                        {% if field.label == 'In time' %}
+
+
+                                            <div class="form-inline">
+                                                <!--Date:--><input autocomplete="off" type="text" name="in_time_0"
+                                                                   placeholder="YYYY-MM-DD" value="{{ field.value.year }}-{{ field.value.month }}-{{ field.value.day }}"
+                                                                   class="vDateField form-control mr-2" size="10"
+                                                                   id="id_in_date">
+
+
+                                                <input hidden type="text" name="in_time" class="form-control"
+                                                       placeholder="In time" value="{{ field.value }}"
+                                                       id="id_in_time">
+
+                                                Schedule: {{ field.value }}
+
+                                            </div>
+
+                                        {% elif field.label == 'Out time' %}
+                                            <div class="form-inline">
+                                                <!--Date:--><input hidden autocomplete="off" type="text"
+                                                                   placeholder="YY-MM-DD"
+                                                                   class="vDateField form-control mr-2" size="10"
+                                                                   id="id_out_date">
+
+                                                In Time:<input type="time" name="in_time_1"
+                                                               class="vTimeField form-control mr-2"
+                                                               size="8" placeholder="HH:MM:SS" required value="10:00"
+                                                               id="in_time">
+                                                Out Time:<input type="time" name="in_time_1"
+                                                                class="vTimeField form-control"
+                                                                size="8" placeholder="HH:MM:SS" required value="17:00"
+                                                                id="out_time">
+
+                                                <input hidden type="text" name="out_time"
+                                                       placeholder="In time"  value="{{ field.value }}"
+                                                       id="id_out_time">
+
+                                            </div>
+                                        {% elif field.label == 'Visitor id' %}
+                                            {{ field }}
+                                        {% elif field.label == 'Requested by' %}
+                                            {{ request.user.get_full_name }}
+                                        {% else %}
+                                            {% render_field field placeholder=field.label class='single-input' %}
+                                        {% endif %}
+
+
                                     </div>
 
                                     <div class=" col-3 col-md-3 col-lg-3 mt-2 " style="padding-left: 10px;">
@@ -64,6 +140,7 @@
                                             <a href="{% url 'visitor:update_visitor' %}" onclick="window.open(this.href, 'mywin',
                                                                'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
                                                target="_blank"><i class="fa fa-plus" style="size: inherit"></i></a>
+
                                         {% endif %}
                                     </div>
 
@@ -74,26 +151,99 @@
                         </div>
                     </div>
                 {% endfor %}
+
+
                 <br>
                 <br>
+
+                <div class="row">
+                    <div class="col-md-2 col-2 text-capitalize mt-8 text-dark ">
+                        Allowed Devices:
+                    </div>
+                    <div class="col-4">
+                        {% for field in allowed_devices %}
+
+
+
+                            <div class="row">
+                                {{ field.device }} ({{ field.detail }}) <a class="ml-3"
+                                    href="{% url 'visitor:allowed_devices_update' id=field.id %}"> <i
+                                    class="fa fa-edit"></i> </a>
+
+                            <a class="ml-3"
+                                    href="{% url 'visitor:allowed_devices_delete' id=field.id %}"> <i
+                                    class="fa fa-remove"></i> </a>
+                            </div>
+
+                        {% endfor %}
+                    </div>
+                </div>
                 <div class="mt-10">
-                    <button type="submit" class="genric-btn success-border radius" style="margin-left: 150px">Update
+                    <button type="submit" class="genric-btn success-border radius" id="update" style="margin-left: 150px">Update
                     </button>
                 </div>
+
+
 
 
                 </form>
 
                 </div>
-
-
-
                 </div>
 
             {% endif %}
 
+
 {% endblock %}
 
 {% block script %}
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="{% static 'custom/select.js' %}"></script>
+    <script>
+        $(function () {
+            $("#id_in_date").datepicker({dateFormat: 'yy-mm-dd', minDate : new Date()});
+            $("#id_out_date").datepicker({dateFormat: 'yy-mm-dd', minDate : new Date()});
+
+        });
+
+        function in_time() {
+
+            var date = document.getElementById('id_in_date').value;
+            var time = document.getElementById('in_time').value;
+            document.getElementById('id_in_time').value = date + ' ' + time;
+            document.getElementById('id_out_date').value = date;
+        }
+
+        function out_time() {
+            var date = document.getElementById('id_out_date').value;
+            var time = document.getElementById('out_time').value;
+            document.getElementById('id_out_time').value = date + ' ' + time;
+        }
+
+
+        $(document).ready(function () {
+            $('#id_in_date').change(function () {
+                in_time();
+                out_time();
+            });
+            $('#in_time').change(function () {
+                in_time();
+            });
+
+            $('#out_time').change(function () {
+                out_time();
+            });
+
+
+            $(function () {
+                $('select').selectize();
+            });
+
+            in_time();
+            out_time();
+
+        });
+    </script>
 
 {% endblock %}
